= MediaWiki release notes =

Security reminder: MediaWiki does not require PHP's register_globals
setting since version 1.2.0. If you have it on, turn it *off* if you can.

== MediaWiki 1.8.1 ==

* Fix PHP notice and estimates for dumpBackup.php and friends
* (bug 7545) Fix PHP version check on install


== MediaWiki 1.8.0 ==

October 10, 2006

This is the quarterly release snapshot for Fall 2006. While the code
has been running on Wikipedia for some time, installation and upgrade
bits may be less well tested. Bug fix releases may follow in the coming
days or weeks.


MediaWiki is now using a "continuous integration" development model with
quarterly snapshot releases. The latest development code is always kept
"ready to run", and in fact runs our own sites on Wikipedia.

Release branches will continue to receive security updates for about a year
from first release, but nonessential bugfixes and feature development happen
will be made on the development trunk and appear in the next quarterly release.

Those wishing to use the latest code instead of a branch release can obtain
it from source control: http://www.mediawiki.org/wiki/Download_from_SVN


== Configuration changes ==

* $wgUseETag, to enable/disable sending of HTTP ETag headers
  (default: disabled)
* $wgLegalTitleChars now includes '+' by default for better compatibility
  with importing data dumps from Wikipedia
* $wgDefaultUserOptions now includes all default option settings instead
  of only overrides.


== Major new features ==

* (bug 7098) Add an option to disable/enable sending of HTTP ETag headers,
  as it seems to result in broken behaviour in combination with Squid 2.6
  (disabled by default).
* (bug 550) Allow blocks on anonymous users only.
* (bug 6420) Render thumbnails for DJVU images, support multipage DJVU display
  on image pages. Added new 'page=' thumbnail option to select a page from a
  multipage djvu for thumbnail generation.